content(concepts): convert class-loading
Sixteenth Core page, drafted and converted in one pass.

Claims java/jvm-memory-gc#q81, java/core-language#q14,
java/concurrency#q52 and java/modern-java#q90. Dropped two candidate
claims that the page cross-references but does not teach:
java/modern-java-22-25#q150 and java/spring#q104.

Carries one diagram, a path-to-GC-root retention chain; no reference
answer draws one, so there was nothing to link to.

Resolves a third slug collision: jvm-memory's `unlocks` promised
`classloader-leaks`, which this page covers, so it now names
`class-loading`. _source/jvm-memory.mdx is left as-is, the same
deliberate one-line divergence as jmm's.